# gridyard

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEVLOG.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  clippy.toml  deny.toml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  rustfmt.toml  tsconfig.base.json
.cursor/rules/: 000-general.mdc  010-rust.mdc  020-typescript.mdc  030-testing.mdc  040-mock-data.mdc
.githooks/: block-main.sh  pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  feature_task.md
.github/workflows/: ci.yml
apps/mock-server/: Dockerfile  README.md  db.json  package.json
apps/web-demo/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web-demo/src/: history-keys.test.ts  history-keys.ts  layout-resize-chrome.test.ts  layout-resize-chrome.ts  load-loan-review.ts  load-workspace.test.ts  load-workspace.ts  main.ts  render-form.ts  scroll-host.test.ts  scroll-host.ts  search-chrome.test.ts  search-chrome.ts  seed-from-bound-grid.test.ts  seed-from-bound-grid.ts  synthetic-loans.test.ts  synthetic-loans.ts  wasm-pkg.d.ts
crates/gridyard-core/: Cargo.toml
crates/gridyard-core/src/: cell.rs  grid.rs  lib.rs  value.rs
crates/gridyard-formula/: Cargo.toml
crates/gridyard-formula/src/: a1.rs  ast.rs  error.rs  eval.rs  functions.rs  lexer.rs  lib.rs  parser.rs  refs.rs  shift.rs
crates/gridyard-graph/: Cargo.toml
crates/gridyard-graph/src/: dep_graph.rs  engine.rs  lib.rs  workspace.rs
crates/gridyard-grid/: Cargo.toml
crates/gridyard-grid/src/: clipboard.rs  lib.rs  undo.rs  view.rs
crates/gridyard-io/: Cargo.toml
crates/gridyard-io/src/: csv.rs  lib.rs
crates/gridyard-wasm/: Cargo.toml
crates/gridyard-wasm/src/: handle.rs  js_value.rs  lib.rs
docs/: 00-index-and-vision.md  01-grid-engine-core-spec.md  02-rendering-layer-spec.md  03-workspace-schema-spec.md  04-layout-and-permission-engine-spec.md  05-extensions-plugins-ai-spec.md  06-mvp-scope-and-roadmap.md  07-repo-scaffolding-spec.md  08-tooling-and-ci-hardening-spec.md  ISSUES_BATCH_01.md  MANUAL_TESTING.md  workspace-ui-mockup.html
docs/ISSUES/: ISSUES_BATCH_01.md  ISSUES_BATCH_02.md  ISSUES_BATCH_03.md  ISSUES_BATCH_04.md  ISSUES_BATCH_05.md  ISSUES_BATCH_06.md  ISSUES_BATCH_07.md
docs/TESTLOG/: TEMPLATE.md
