[package]
name = "gridyard-formula"
description = "Formula lexer, parser, AST, evaluator, and function registry."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gridyard-core = { path = "../gridyard-core" }
slotmap = "1.1.1"

[lints]
workspace = true
