[package]
name = "gridyard-graph"
description = "Dependency graph, dirty-marking, and topological recalculation."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gridyard-core = { path = "../gridyard-core" }
gridyard-formula = { path = "../gridyard-formula" }

[lints]
workspace = true
