[package]
name = "gridyard-grid"
description = "Selection, clipboard, sort/filter, and undo/redo."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
gridyard-core = { path = "../gridyard-core" }
gridyard-formula = { path = "../gridyard-formula" }

[lints]
workspace = true
